assets/scss/_common.scss
/* DOCUMENT INFORMATION
	- Document: SCSS Style for Portfolio
	- Version:  1
	- Author:   Anthony BARNOIN
*/

html {
  font-size: $base-font-size;
  font-family: "Nunito", sans-serif;
  scroll-behavior: smooth;
  line-height: 1.55rem;
  text-align: center;
}

/* ===============
     COMMON
     =============== */
.text-justify {
  text-align: justify;
}

.container-shadow {
  width: 97%;
  box-shadow: $container-shadow;
  margin: 1rem auto;
  overflow: auto;

  .container {
    margin: 1.5rem 1rem;

    h1 {
      color: $bs-orange;
    }

    .long-description {
      max-width: 60rem;
      margin: auto;
    }
  }
}

/* ===============
     HEADER
     =============== */
header {
  background-color: $bs-navy;
  color: $header-text-color;

  left: 0;
  top: 0;
  z-index: 5;

  position: sticky;
  @include media-min(lg) {
    position: fixed;
    height: 100vh;
    width: 21rem;
  }

  .topbar {
    height: 4.4rem;
    display: flex;
    align-items: center;

    h1 {
      flex: auto;
      font-weight: 500;
      font-size: 1.8rem;
      margin-right: 4.43rem;

      @include media-min(lg) {
        margin-right: 0;
      }
    }
  }

  .wrapper {
    display: none;
    font-size: 1.1rem;
    height: 100vh;

    @include media-min(lg) {
      display: block;
    }

    .profile-section {
      width: 75%;
      margin: auto;
    }

    .profile-pic {
      margin: 1rem 0;
      border-radius: 50%;
    }

    .social-section {
      margin-top: 2rem;

      a {
        @include a-whitout-decoration($header-text-color);
        font-size: 2.6rem;
        margin: 0 0.6rem;
      }
    }

    hr {
      border: none;
      height: 0.1rem;
      background-color: rgba(255, 255, 255, 0.7);
    }

    nav {
      padding: 0.6rem;

      ul {
        padding: 0;

        li {
          list-style: none;
          margin: 1rem 0;

          a {
            @include a-whitout-decoration($header-text-color);
          }
        }
      }
    }
  }
}

/* ===============
     MAIN WRAPPER
     =============== */
.main-wrapper {
  @include media-min(lg) {
    margin-left: 21rem;
  }

  #summary-section {
    background: linear-gradient(
        to right,
        rgba(0, 0, 0, 0.7),
        rgba(0, 0, 0, 0.5)
      ),
      no-repeat center/cover url("/assets/images/bg_about-me_section.jpg");

    overflow: auto;

    @include media-min(xl) {
      display: flex;
    }

    //add little blank margin on left side when lg screen
    @include media-min(lg) {
      margin-left: 0.1rem;
    }

    .summary-container {
      flex: 1;
      margin: 2rem 2rem 1.5rem 2rem;
      color: $header-text-color;

      h1,
      h2 {
        font-weight: normal;
        margin: 0.6rem 0;
        text-align: left;
      }

      p {
        margin-top: 2rem;
      }

      a {
        display: block;
        width: 11.5rem;
        margin: 2rem auto 0 auto;
        text-decoration: none;
        outline: none;
        border-radius: 0.5rem;
        padding: 1rem 0;
        background-color: $bs-orange;
        color: #fff;
        transition: 0.5s;

        &:hover {
          background-color: darken($color: $bs-orange, $amount: 10);
        }
      }
    }

    .typing-effect {
      flex: 1;
      align-self: center;
      font-size: 1.5rem;

      span.code {
        &::before {
          content: "<";
        }
        &::after {
          content: ">";
        }
        color: $bs-orange;
        font-weight: normal;
      }

      p {
        color: $header-text-color;
        margin: 1rem;
        letter-spacing: 0.1rem;
      }

      span.typed-text {
        font-weight: normal;
      }

      span.cursor {
        display: inline-block;
        background-color: #ccc;
        margin-left: 0.1rem;
        width: 0.1rem;
        animation: blink 1s infinite;
      }

      span.cursor.typing {
        animation: none;
      }

      @keyframes blink {
        0% {
          background-color: #ccc;
        }
        49% {
          background-color: #ccc;
        }
        50% {
          background-color: transparent;
        }
        99% {
          background-color: transparent;
        }
        100% {
          background-color: #ccc;
        }
      }
    }
  }

  #about-me {
    @include box-flex($box-width: 15rem);
    h2 {
      font-size: 1.2rem;
    }
  }

  #skills {
    @include box-flex(2rem, 0, 2rem, 0);

    section {
      margin: 1.5rem 0;

      @include media-min(xxl) {
        margin: 1.5rem;
      }

      box-shadow: $container-shadow;
      border-radius: 1rem;
      padding: 0.1rem;

      //title of each sections
      & > h2 {
        color: $bs-navy;
        font-weight: normal;
        font-size: 1.3rem;

        &::before,
        &::after {
          opacity: 0.3;
        }

        @include media-min(sm) {
          &::before,
          &::after {
            content: " ------ ";
          }
        }

        @include media-min(xl) {
          &::before,
          &::after {
            content: " ------------ ";
          }
        }
      }
    }

    .box {
      .img-container {
        height: 9rem;
        display: flex;
        justify-content: center;
      }

      div {
        p {
          margin: 0;

          .transparent {
            opacity: 0.3;
          }
        }

        .space-separate {
          margin: 0.7rem 0;
        }
      }
    }
  }

  #projects {
    @include box-flex(0.5rem, 0.5rem, 0.5rem, 0.5rem, $box-width: 35rem);

    .box {
      cursor: pointer;

      border: solid 0.1rem rgba(black, 0.4);
      box-shadow: $container-shadow;
      border-radius: 1rem;
      padding: 1rem;

      transition-duration: 0.5s;

      &:hover {
        transform: scale(1.03);
      }

      h2 {
        margin-top: 0;
      }
      em {
        display: block;
        margin: 1rem 0;
        text-align: justify;
      }
    }
  }
}

/* ===============
     HAMBURGER MENU
     =============== */

/* do not show the checkbox */
.menu-hamburger {
  display: none;
}

/* label container */
.menu-hamburger + label {
  margin-left: 0.62rem;
  position: relative;
  width: 3.75rem;
  border: 0.1rem solid #fff;
  border-radius: 0.25rem;
  height: 3.12rem;
  cursor: pointer;
  display: inline-block;

  @include media-min(lg) {
    display: none;
  }
}

/* lines */
.menu-hamburger + label span {
  position: absolute;
  top: 1.37rem;
  left: 0.87rem;
  right: 0.87rem;
  height: 0.25rem;
  background: hsl(0, 0%, 100%);
}

.menu-hamburger + label span:after,
.menu-hamburger + label span:before {
  position: absolute;
  left: 0;
  width: 100%;
  height: 0.25rem;
  background-color: hsl(0, 0%, 100%);
  content: "";
}

.menu-hamburger + label span:before {
  top: -0.93rem;
}

.menu-hamburger + label span:after {
  bottom: -0.93rem;
}

/* transition duration when unchecked */
.menu-hamburger + label span:after,
.menu-hamburger + label span:before {
  transition: 0.3s;
}

/* top line : go to middle and hide */
.menu-hamburger:checked + label span:before {
  top: 0;
}

/* bot line : go to middle and rotate to make a cross */
.menu-hamburger:checked + label span:after {
  bottom: 0;
  transform: rotate(-90deg);
}

/* rotate the cross */
.menu-hamburger:checked + label span {
  transition: 1s;
  transform: rotate(45deg);
}

